brat/test/golden/error/kbadvec.brat.golden
Error in test/golden/error/kbadvec.brat@2:17-20
triple = { b => [b] }
                ^^^

  Expected vector of length 3
from the type:  Vec(Bit, 3)
but got vector: [「b」]
of length 1


